--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -78,7 +78,7 @@
               </div>
             </div>
           </div>
-          <h6 class="team-title">VINAY AROHRA</h6>
+          <h6 class="team-title">VINAY ARORA</h6>
           <span>Software Engineer</span>
         </div>
       </div>
