--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,7 +14,7 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
-   background-color: #bebcae;
+   background-color: #cdd8e0;
    height: 80px;
    width: 100%;
    padding-left:3%;
