--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="!projectDetails.name">
           <div class="d-flex">
             <h1>Welcome - {{userName}}</h1>
-            <img *ngIf="title" src="../../assets/crown.png" alt="" srcset="">
+            <img *ngIf="title" id="title" src="../../assets/crown.png" alt="" srcset="">
           </div>
             <h2>Select the <span>Project</span> to work On</h2>
 
@@ -96,5 +96,8 @@
             <mat-tab disabled></mat-tab>
             <mat-tab disabled></mat-tab>
           </mat-tab-group>
+          <div>
+            <button id="support"><i class="fa-solid fa-user-headset"></i></button>
+          </div>
 
 </div>
