--- a/src/app/forget-pass/forget-pass.component.html
+++ b/src/app/forget-pass/forget-pass.component.html
@@ -1,14 +1,14 @@
 <div>
-    <img src="../../assets/kanban.png" alt="background" id="img1">
+    <img src="../../assets/auth.png" alt="background" id="img1">
     <div id="login-form">
         <a href=""></a>
-            <h2>Enter registered email id</h2>
+            <h2>Enter Registered Email-id</h2>
             <p *ngIf="!sent">
                 We will send a reset password link to your email.
             </p>
             <p *ngIf="sent">
-                The email has been seccussfully sent
-                plese check your email
+                The email has been successfully sent
+                please check your email
             </p>
             <p *ngIf="error">
                 Check your Email Id
@@ -17,7 +17,7 @@
             <form *ngIf="!sent">
                 <mat-form-field appearance="outline">
                     <mat-label>Email Id</mat-label>
-                    <input matInput type="email" name="email" [(ngModel)]="email" (click)="changeError()">
+                    <input matInput type="email" name="email" [(ngModel)]="email" (click)="changeError()" required>
                 </mat-form-field>
                 <button mat-fab color="primary" type="submit" (click)="submit()"><mat-icon>send</mat-icon></button>
             </form>     
