--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -23,13 +23,18 @@ h1{
   margin-left: 100px;
   font-size: 60px;
   font-weight: 900px;
-  font-family: 'Roboto', sans-serif;
-  font-family: 'Tilt Neon', cursive;
-  font-family: 'Tilt Warp', cursive;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   letter-spacing: 0.2rem;
   width: 30%;
   line-height: 60px;
  
+}
+
+.gif{
+  width: 600px;
+  position: relative;
+  top: -550px;
+  left: 50px;
 }
 
 footer{
@@ -38,14 +43,15 @@ footer{
 }
 
 h2{
-  margin-top: 50px;
-  margin-left: 100px;
-  width: 30%;
+  position: relative;
+  top: 100px;
+  left: 45px;
+  width: 60%;
   font-size: 25px;
-  font-family: 'kanyon-light';
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   letter-spacing: 0.2rem;
   line-height: 30px;
-  padding-top: 10px;
+  
 }
 h2>mat-icon{
   
@@ -69,162 +75,96 @@ h3>mat-icon{
   padding-top: 4px;
 }
 
-#gif{
+#gifs{
   width: 550px;
-  margin-left: 23px;
+  position: relative;
+  top: -200px;
+  left: 1000px;
+}
+
+#btn{
+  position: relative;
+  top: -500px;
+  left: 750px;
+  background-color: black;
+  width: 150px;
+  height: 50px;
+  color: #fff;
+  border-radius: 20px;
+}
+
+.container{
+  position: relative;
+  top: -450px;
+}
+
+#cards{
+  height: 600px;
+  border-radius: 20px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 #video1{
-  position: fixed;
-  right: 10%;
-  margin-top: -30%;
-  width: 700px;
-  background: transparent;
-  border-radius: 10px;
+  position: relative;
+  top: 50px;
+  border-radius: 20px;
+  left: 700px;
+  width: 40%;
 }
 
+#card_img{
+  position: relative;
+  top: -350px;
+  border-radius: 20px;
+  left: 700px;
+  width: 40%;
+}
 
-.c-checkbox {
-    display: none;
-  }
-  .c-checkbox:checked + .c-formContainer .c-form {
-    width: 37.5em;
-  }
-  .c-checkbox:checked + .c-formContainer .c-form__toggle {
-    visibility: hidden;
-    opacity: 0;
-    transform: scale(0.7);
-  }
-  .c-checkbox:checked + .c-formContainer .c-form__input,
-  .c-checkbox:checked + .c-formContainer .c-form__buttonLabel {
-    transition: 0.2s 0.1s;
-    visibility: visible;
-    opacity: 1;
-    transform: scale(1);
-  }
-  .c-checkbox:not(:checked) + .c-formContainer .c-form__input:required:valid ~ .c-form__toggle::before, .c-checkbox:checked + .c-formContainer .c-form__input:required:valid ~ .c-form__toggle::before {
-    content: "WELCOME! 😊";
-  }
-  .c-checkbox:not(:checked) + .c-formContainer .c-form__input:required:valid ~ .c-form__toggle {
-    pointer-events: none;
-    cursor: default;
-  }
-  
-  .c-formContainer,
-  .c-form,
-  .c-form__toggle {
-    width: 20em;
-    height: 6.25em;
-  }
-  
-  .c-formContainer {
-    position: relative;
-    font-weight: 700;
-    margin-left: 170px;
-    margin-top: 5px;
-  }
-  
-  .c-form,
-  .c-form__toggle {
-    position: absolute;
-    border-radius: 6.25em;
-    background-color: #ffffff;
-    transition: 0.2s;
-  }
-  
-  .c-form {
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 0.625em;
-    box-sizing: border-box;
-    box-shadow: 0 0.125em 0.3125em rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
-  }
-  
-  .c-form__toggle {
-    color: #fb6300;
-    top: 0;
-    cursor: pointer;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.5);
-    transition: all 0.3s ease 0s;
-  }
+.carousel-inner{
+  position: relative;
+}
 
+#carouselExampleInterval{
+  overflow: hidden;
+  width: 650px;
+  position: relative;
+  top: -150px;
+  left: 650px;
+  border-radius: 20px;
+}
 
-  .c-form__toggle:hover{
-    background-color: #fb6300;
-    box-shadow: 0px 15px 20px rgba(245, 155, 22, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
-  }
+.carousel-control-prev-icon{
+  border-radius: 20px;
+  background-color: black;
+}
 
-  .c-form__toggle::before {
-    font-size: 1.75em;
-    content: attr(data-title);
-  }
-  
-  .c-form__input,
-  .c-form__button {
-    font: inherit;
-    border: 0;
-    outline: 0;
-    border-radius: 5em;
-    box-sizing: border-box;
-  }
-  
-  .c-form__input,
-  .c-form__buttonLabel {
-    font-size: 1.75em;
-    opacity: 0;
-    visibility: hidden;
-    transform: scale(0.7);
-    transition: 0s;
-  }
-  
-  .c-form__input {
-    color: #fb6300;
-    height: 100%;
-    width: 100%;
-    padding: 0 0.714em;
-  }
-  .c-form__input::placeholder {
-    color: currentColor;
-  }
-  .c-form__input:required:valid {
-    color: #fb6300;
-  }
-  .c-form__input:required:valid + .c-form__buttonLabel {
-    color: #ffffff;
-  }
-  .c-form__input:required:valid + .c-form__buttonLabel::before {
-    pointer-events: initial;
-  }
-  
-  .c-form__buttonLabel {
-    color: #ffaea9;
-    height: 100%;
-    width: auto;
-  }
-  .c-form__buttonLabel::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    cursor: pointer;
-  }
-  
-  .c-form__button {
-    color: inherit;
-    padding: 0;
-    height: 100%;
-    width: 5em;
-    background-color: #fb6300;
-  }
+.carousel-control-next-icon{
+  border-radius: 20px;
+  background-color: black;
+}
+
+.d-block{
+  width: 650px;
+  height: 550px;
+}
+
+#extra{
+  position: relative;
+  top: -250px;
+  left: 650px;
+  font-size: 25px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  letter-spacing: 0.2rem;
+  line-height: 30px;
+}
+
+#join{
+  position: relative;
+  top: -100px;
+  left: 50px;
+  background-color: black;
+  color: white;
+}
 
   #icon{
     color: green;
