--- a/src/app/project-details/project-details.component.css
+++ b/src/app/project-details/project-details.component.css
@@ -25,6 +25,12 @@ button{
     
 }
 
+#title{
+    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+}
+
 #img{
     position: relative;
     top: 20px;
